K8s/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  type: LoadBalancer
  selector:
    app: result
  ports:
  - port: 80
    targetPort: 80
