K8s/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
spec:
  type: LoadBalancer
  selector:
    app: vote
  ports:
  - port: 80
    targetPort: 80
